--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Shared/_ProductBox.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Shared/_ProductBox.cshtml
@@ -37,7 +37,7 @@
             }
             else
             {
-                <input type="button" class="prod-box-priceblock-btn" onclick="AjaxCart.addproducttocart_catalog('@addtocartlink');return false;" />
+                <input type="button" class="prod-box-priceblock-btn" alt="В корзину" onclick="AjaxCart.addproducttocart_catalog('@addtocartlink');return false;" />
             }
         }
 
