--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Common/HeaderLinks.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Common/HeaderLinks.cshtml
@@ -4,7 +4,7 @@
     <ul>
         @if (Model.IsAuthenticated)
         {
-            <li><a href="@Url.RouteUrl("CustomerInfo")" class="account">@Model.CustomerEmailUsername</a></li>
+            <li><a href="@Url.RouteUrl("CustomerInfo")" class="account">Личный кабинет</a></li>
             <li><a href="@Url.RouteUrl("Logout")" class="ico-logout">@T("Account.Logout")</a></li>
         }
         else
