--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Shared/_Root.Head.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Shared/_Root.Head.cshtml
@@ -31,6 +31,7 @@
     <meta name="description" content="@(Html.NopMetaDescription())" />
     <meta name="keywords" content="@(Html.NopMetaKeywords())" />
     <meta name="generator" content="nopCommerce" />
+    <meta name='yandex-verification' content='7437fa256f501bec' />
     @Html.NopHeadCustom()
     @*This is used so that themes can inject content into the header*@
     @Html.Partial("Head")
